--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,11 +6,11 @@
         android:id="@+id/item1"
         android:icon="@mipmap/ic_launcher"
         app:showAsAction="always" />
-    <item android:title="Item"
+    <item android:title="@string/item2"
         android:id="@+id/item2"
         android:checkable="false"
         android:icon="@mipmap/ic_launcher" />
-    <item android:title="Item"
+    <item android:title="@string/item3"
         android:id="@+id/item3"
         android:icon="@mipmap/ic_launcher" />
 </menu>
